[gd_scene load_steps=43 format=2]

[ext_resource path="res://resources/sprites/images/new_game_glow.png" type="Texture" id=1]
[ext_resource path="res://resources/sprites/images/new_game.png" type="Texture" id=2]
[ext_resource path="res://resources/sprites/images/spr_exit_0.png" type="Texture" id=3]
[ext_resource path="res://resources/sprites/images/settings.png" type="Texture" id=4]
[ext_resource path="res://resources/sprites/images/levels.png" type="Texture" id=5]
[ext_resource path="res://resources/sprites/images/spr_exit_1.png" type="Texture" id=6]
[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=7]
[ext_resource path="res://resources/sprites/images/levels_glow.png" type="Texture" id=8]
[ext_resource path="res://resources/sprites/images/settings_glow.png" type="Texture" id=9]
[ext_resource path="res://scenes/MainScene.gd" type="Script" id=10]
[ext_resource path="res://scenes/GameScene.gd" type="Script" id=11]
[ext_resource path="res://resources/sprites/images/spr_sine_0.png" type="Texture" id=12]
[ext_resource path="res://scenes/SineWave.gd" type="Script" id=13]
[ext_resource path="res://resources/sprites/images/transparent_box.png" type="Texture" id=14]
[ext_resource path="res://resources/new_dynamicfont.tres" type="DynamicFont" id=15]
[ext_resource path="res://scenes/Level1Spawner.gd" type="Script" id=16]
[ext_resource path="res://scenes/Level2Spawner.gd" type="Script" id=17]
[ext_resource path="res://resources/sound/audio/snd_bush_week.mp3" type="AudioStream" id=18]
[ext_resource path="res://resources/sound/audio/snd_warm_vacuum_admiral_bob.mp3" type="AudioStream" id=19]
[ext_resource path="res://resources/sound/audio/snd_night_lights.mp3" type="AudioStream" id=20]
[ext_resource path="res://resources/sound/audio/snd_no_artificial_flavoring.mp3" type="AudioStream" id=21]
[ext_resource path="res://scenes/VertSineWave.gd" type="Script" id=22]
[ext_resource path="res://scenes/AudioPlayer.gd" type="Script" id=23]
[ext_resource path="res://scenes/LevelData.gd" type="Script" id=24]
[ext_resource path="res://resources/sprites/images/spr_wavelord_0.png" type="Texture" id=25]
[ext_resource path="res://resources/sprites/images/spr_mayor_0.png" type="Texture" id=26]
[ext_resource path="res://resources/sprites/images/spr_speech_0.png" type="Texture" id=27]
[ext_resource path="res://scenes/AnimationPlayer.gd" type="Script" id=28]
[ext_resource path="res://resources/sprites/images/spr_resume_0.png" type="Texture" id=29]
[ext_resource path="res://resources/sprites/images/spr_resume_1.png" type="Texture" id=30]
[ext_resource path="res://resources/sprites/images/1_large.png" type="Texture" id=31]
[ext_resource path="res://scenes/PauseMenu.gd" type="Script" id=32]
[ext_resource path="res://resources/sprites/images/1_large_glow.png" type="Texture" id=33]
[ext_resource path="res://resources/sprites/images/3_large.png" type="Texture" id=34]
[ext_resource path="res://resources/sprites/images/2_large_glow.png" type="Texture" id=35]
[ext_resource path="res://resources/sprites/images/2_large.png" type="Texture" id=36]
[ext_resource path="res://resources/sprites/images/3_large_glow.png" type="Texture" id=37]
[ext_resource path="res://scenes/LevelsMenu.gd" type="Script" id=38]
[ext_resource path="res://resources/sprites/images/4_large_glow.png" type="Texture" id=39]
[ext_resource path="res://resources/sprites/images/4_large.png" type="Texture" id=40]
[ext_resource path="res://scenes/Level3Spawner.gd" type="Script" id=41]

[sub_resource type="CapsuleShape2D" id=1]
radius = 42.5731
height = 70.8943

[node name="MainScene" type="Node2D"]
script = ExtResource( 10 )

[node name="PauseMenu" type="Node2D" parent="."]
visible = false
z_index = 2
script = ExtResource( 32 )

[node name="PauseControl" type="Control" parent="PauseMenu"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/PauseControl"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="TextureButton" parent="PauseMenu/PauseControl/VBoxContainer"]
margin_right = 500.0
margin_bottom = 205.0
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 30 )
texture_hover = ExtResource( 30 )
texture_focused = ExtResource( 30 )

[node name="Exit" type="TextureButton" parent="PauseMenu/PauseControl/VBoxContainer"]
margin_top = 209.0
margin_right = 500.0
margin_bottom = 331.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )

[node name="LevelsMenu" type="Node2D" parent="."]
visible = false
script = ExtResource( 38 )

[node name="Control" type="Control" parent="LevelsMenu"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LevelsMenu/Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="TextureButton" parent="LevelsMenu/Control/VBoxContainer"]
margin_right = 188.0
margin_bottom = 122.0
texture_normal = ExtResource( 31 )
texture_pressed = ExtResource( 33 )
texture_hover = ExtResource( 33 )
texture_focused = ExtResource( 33 )

[node name="Level2" type="TextureButton" parent="LevelsMenu/Control/VBoxContainer"]
margin_top = 126.0
margin_right = 188.0
margin_bottom = 248.0
texture_normal = ExtResource( 36 )
texture_pressed = ExtResource( 35 )
texture_hover = ExtResource( 35 )
texture_focused = ExtResource( 35 )

[node name="Level3" type="TextureButton" parent="LevelsMenu/Control/VBoxContainer"]
margin_top = 252.0
margin_right = 188.0
margin_bottom = 374.0
texture_normal = ExtResource( 34 )
texture_pressed = ExtResource( 37 )
texture_hover = ExtResource( 37 )
texture_focused = ExtResource( 37 )

[node name="Level4" type="TextureButton" parent="LevelsMenu/Control/VBoxContainer"]
margin_top = 378.0
margin_right = 188.0
margin_bottom = 500.0
texture_normal = ExtResource( 40 )
texture_pressed = ExtResource( 39 )
texture_hover = ExtResource( 39 )
texture_focused = ExtResource( 39 )

[node name="MainMenu" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Control" type="Control" parent="MainMenu"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="TextureButton" parent="MainMenu/Control/VBoxContainer"]
margin_right = 547.0
margin_bottom = 122.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
texture_focused = ExtResource( 1 )

[node name="Levels" type="TextureButton" parent="MainMenu/Control/VBoxContainer"]
margin_top = 126.0
margin_right = 547.0
margin_bottom = 248.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
texture_focused = ExtResource( 8 )

[node name="Settings" type="TextureButton" parent="MainMenu/Control/VBoxContainer"]
margin_top = 252.0
margin_right = 547.0
margin_bottom = 369.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_focused = ExtResource( 9 )

[node name="Exit" type="TextureButton" parent="MainMenu/Control/VBoxContainer"]
margin_top = 373.0
margin_right = 547.0
margin_bottom = 495.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )

[node name="GameScene" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="LevelSpawner" type="Node" parent="GameScene"]
script = ExtResource( 24 )

[node name="Level1Spawner" type="Node" parent="GameScene/LevelSpawner"]
script = ExtResource( 16 )

[node name="Level2Spawner" type="Node" parent="GameScene/LevelSpawner"]
script = ExtResource( 17 )

[node name="Level3Spawner" type="Node" parent="GameScene/LevelSpawner"]
script = ExtResource( 41 )

[node name="SineWave" type="KinematicBody2D" parent="GameScene"]
position = Vector2( 512, 660 )
script = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="GameScene/SineWave"]
scale = Vector2( 0.5, 0.25 )
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameScene/SineWave"]
position = Vector2( 0, 30.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="GameScene/SineWave"]
position = Vector2( 203, 30.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="GameScene/SineWave"]
position = Vector2( 413, 31.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="GameScene/SineWave"]
position = Vector2( 621, 30.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="GameScene/SineWave"]
position = Vector2( 824, 30.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="GameScene/SineWave"]
position = Vector2( 1034, 31.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="GameScene/SineWave"]
position = Vector2( 1241, 31.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="GameScene/SineWave"]
position = Vector2( -208, 31.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="GameScene/SineWave"]
position = Vector2( -418, 30.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="GameScene/SineWave"]
position = Vector2( -622, 30.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="GameScene/SineWave"]
position = Vector2( -829, 31.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="GameScene/SineWave"]
position = Vector2( -1039, 30.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="GameScene/SineWave"]
position = Vector2( -1242, 30.2517 )
shape = SubResource( 1 )

[node name="VertSineWave" type="KinematicBody2D" parent="GameScene"]
position = Vector2( 1000, 660 )
rotation = 4.71239
script = ExtResource( 22 )

[node name="Sprite" type="Sprite" parent="GameScene/VertSineWave"]
scale = Vector2( 0.5, 0.25 )
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameScene/VertSineWave"]
position = Vector2( 0, 30.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="GameScene/VertSineWave"]
position = Vector2( 203, 30.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="GameScene/VertSineWave"]
position = Vector2( 413, 31.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="GameScene/VertSineWave"]
position = Vector2( 621, 30.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="GameScene/VertSineWave"]
position = Vector2( 824, 30.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="GameScene/VertSineWave"]
position = Vector2( 1034, 31.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="GameScene/VertSineWave"]
position = Vector2( 1241, 31.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="GameScene/VertSineWave"]
position = Vector2( -208, 31.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="GameScene/VertSineWave"]
position = Vector2( -418, 30.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="GameScene/VertSineWave"]
position = Vector2( -622, 30.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="GameScene/VertSineWave"]
position = Vector2( -829, 31.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="GameScene/VertSineWave"]
position = Vector2( -1039, 30.2517 )
shape = SubResource( 1 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="GameScene/VertSineWave"]
position = Vector2( -1242, 30.2517 )
shape = SubResource( 1 )

[node name="Score" type="CanvasLayer" parent="GameScene"]

[node name="Label" type="Label" parent="GameScene/Score"]
margin_left = 862.0
margin_top = 31.0
margin_right = 1020.0
margin_bottom = 94.0
size_flags_horizontal = 2
size_flags_vertical = 6
custom_fonts/font = ExtResource( 15 )
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CityCollision" type="KinematicBody2D" parent="GameScene"]

[node name="Sprite" type="Sprite" parent="GameScene/CityCollision"]
position = Vector2( 514.281, 706.816 )
scale = Vector2( 1.1, 1.224 )
texture = ExtResource( 14 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GameScene/CityCollision"]
position = Vector2( 514.281, 706.816 )
scale = Vector2( 1.1, 1.224 )
polygon = PoolVector2Array( 512, 60, -512, 60, -512, -60, 512, -60 )

[node name="AudioPlayer" type="Node" parent="GameScene"]
script = ExtResource( 23 )

[node name="SndAdmiralBob" type="AudioStreamPlayer" parent="GameScene/AudioPlayer"]
stream = ExtResource( 19 )
volume_db = -30.0

[node name="SndNoArtificialFlavoring" type="AudioStreamPlayer" parent="GameScene/AudioPlayer"]
stream = ExtResource( 21 )
volume_db = -30.0

[node name="SndNightLights" type="AudioStreamPlayer" parent="GameScene/AudioPlayer"]
stream = ExtResource( 20 )
volume_db = -30.0

[node name="SndBushWeek" type="AudioStreamPlayer" parent="GameScene/AudioPlayer"]
stream = ExtResource( 18 )
volume_db = -30.0

[node name="AnimationPlayer" type="Node" parent="GameScene"]
script = ExtResource( 28 )

[node name="MayorSprite" type="Sprite" parent="GameScene/AnimationPlayer"]
visible = false
texture = ExtResource( 26 )

[node name="WaveLordSprite" type="Sprite" parent="GameScene/AnimationPlayer"]
visible = false
texture = ExtResource( 25 )

[node name="SpeechSprite" type="Sprite" parent="GameScene/AnimationPlayer"]
visible = false
texture = ExtResource( 27 )

[node name="Opacity" type="Sprite" parent="."]
visible = false
position = Vector2( 726.642, 438.074 )
scale = Vector2( 2.41922, 8.30124 )
z_index = 1
texture = ExtResource( 14 )
